<resources>
    <string name="app_name">CorrectFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_your_shoulder_type">What is your shoulder type?</string>
    <string name="shoulderwaist_proportionate_waist">Shoulderwaist proportionate waist</string>
    <string name="broad">BROAD</string>
    <string name="initial_stage_of_bust_development_after_puberty">Initial stage of bust development after puberty</string>
    <string name="based_on_the_information_you_provided_n_we_recommend">Based on the information you provided,\n we recommend</string>
    <string name="the_per_fit_size">THE PER-FIT SIZE</string>
    <string name="bra_size">BRA SIZE</string>
    <string name="panty_size">PANTY SIZE</string>
    <string name="which_brand_are_you_currently_buying_n_you_are_lingerie_from">Which brand are you currently buying \n you are lingerie from</string>
    <string name="what_is_your_current_bra_size">What is your current Bra Size ?</string>
    <string name="your_bra_size">Your Bra Size</string>
    <string name="braSize">BraSize</string>
    <string name="skip">Skip</string>
    <string name="shoulder_waist_proportionate_waist">Shoulder waist proportionate waist</string>
    <string name="regular">REGULAR</string>
    <string name="which_phase_of_woman_are_u_in">Which phase of woman are u in?</string>
    <string name="measure_yourself">Measure Yourself</string>
    <string name="sister_size">SISTER SIZE</string>
    <string name="final_result">Final Result</string>
    <string name="do_you_know_your_current_size">Do you know your current size</string>
    <string name="cupSize">CupSize</string>
</resources>