<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CurrentSize">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.06802721" />

    <TextView
        android:id="@+id/textView3"
        style="@style/MainTextView"
        android:text="@string/what_is_your_current_bra_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        style="@style/GuidLines"
        app:layout_constraintGuide_end="160dp" />

    <TextView
        android:id="@+id/yourBrasSize"
        style="@style/WomanHoodTitle"
        android:text="@string/your_bra_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalSize"
        style="@style/oldBraSize"
        android:text="_"
        app:layout_constraintEnd_toEndOf="@+id/yourBrasSize"
        app:layout_constraintStart_toStartOf="@+id/yourBrasSize"
        app:layout_constraintTop_toBottomOf="@id/yourBrasSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/ButtonConstrain"
        android:layout_marginBottom="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appButtonNext"
            style="@style/ButtonNext"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appButtonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appButtonBack"
            style="@style/ButtonBack"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/appButtonNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.13877551" />

    <TextView
        android:id="@+id/Bra"
        style="@style/WomanHoodTitle"
        android:fontFamily="@font/inter_light"
        android:text="@string/braSize"
        android:textColor="#646464"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline16" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BraConstrain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bra">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/braSizeRecycler"
            style="@style/oldSizeRecycler"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/BraConstrain"
            tools:listitem="@layout/item_bra_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cupSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/yourBrasSize">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CupSizeRecycler"
            style="@style/oldSizeRecycler"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_bra_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.45" />
    <TextView
        android:id="@+id/cupSize"
        style="@style/WomanHoodTitle"
        android:fontFamily="@font/inter_light"
        android:text="@string/cupSize"
        android:textColor="#646464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline21"/>
</androidx.constraintlayout.widget.ConstraintLayout>