<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FinalResult">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.073469386" />

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/correctfitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.26938775" />

    <TextView
        style="@style/logoDescription"
        android:text="@string/based_on_the_information_you_provided_n_we_recommend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.3782313" />

    <TextView
        android:id="@+id/PerFitSize"
        style="@style/perFitSize"
        android:text="@string/the_per_fit_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline10" />

    <TextView
        android:id="@+id/textView"
        style="@style/perFitDescription"
        android:text="@string/final_result"
        android:textColor="#7E7E7E"
        app:layout_constraintEnd_toEndOf="@+id/PerFitSize"
        app:layout_constraintStart_toStartOf="@+id/PerFitSize"
        app:layout_constraintTop_toBottomOf="@id/PerFitSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.4612245" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="#FFCCD2"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/ResultBord"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/inter"
                        android:textStyle="bold"
                        android:text="@string/bra_size"
                        android:textColor="#3D3D3D"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/BraSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:textColor="#FF566A"
                        android:text="34DD"
                        android:textSize="@dimen/_17ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="#FFE0E4" />



                <LinearLayout
                    android:id="@+id/pantySize"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/inter"
                        android:text="@string/panty_size"
                        android:textColor="#3D3D3D"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/PantySize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:text="L"
                        android:textColor="#FF566A"
                        android:textSize="@dimen/_17ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:background="#FFE0E4"
                android:layout_marginStart="40dp">
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="65dp"
                    android:layout_height="45dp"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/inter"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="@dimen/_70sdp"
                        android:text="SISTER SIZE"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="12dp"
                    android:layout_height="45dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/SisterSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="34DD"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/inter_semi_bold"
                        android:layout_marginTop="10dp"
                        android:textColor="#FF566A"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="130dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartAgain"
        android:layout_width="144dp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="30dp"
        android:background="@drawable/startagainbutton"
        android:text="START AGAIN"
        android:textColor="#FF566A"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ShopNow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ShopNow"
        android:layout_width="144dp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shopnowbutton"
        android:text="SHOP NOW"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/StartAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StartAgain"
        app:layout_constraintTop_toTopOf="@+id/StartAgain" />


</androidx.constraintlayout.widget.ConstraintLayout>