<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineMain"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.06802721" />

    <TextView
        android:id="@+id/WhtShTyp"
        style="@style/MainTextView"
        android:text="@string/what_is_your_shoulder_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideLineMain" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideButton"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.92789114" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/ButtonConstrain"
        app:layout_constraintBottom_toTopOf="@+id/guideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appButtonNext"
            style="@style/ButtonNext"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appButtonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appButtonBack"
            style="@style/ButtonBack"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/appButtonNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLinePicture"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.18231292" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        style="@style/GuidLines"
        app:layout_constraintGuide_percent="0.54965985" />


    <ImageView
        android:id="@+id/BroadShoulderImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/shoulder"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideLinePicture"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/LinearLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <TextView
            android:id="@+id/TypeNames"
            style="@style/TypesOfProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broad" />

        <TextView
            android:id="@+id/discriptionNames"
            style="@style/TypesDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBar"
                style="@style/SeekBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>




        <LinearLayout
            style="@style/typesLinearLayout"
            android:weightSum="3">

            <TextView
                android:id="@+id/changeType1"
                style="@style/seekBarDescription" />

            <TextView
                android:id="@+id/changeType2"
                style="@style/seekBarDescription"
                android:gravity="center"
                android:text="@string/regular" />

            <TextView
                android:id="@+id/changeType3"
                style="@style/seekBarDescription"
                android:gravity="end" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>